# Space-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Helper.h
src/debug/: DebugGame.h
src/gameobject/: Gameobject.cpp  Gameobject.h  GameobjectsEnum.h
src/gameobject/collisionManager/: CollisionManager.h
src/gameobject/components/: ColliderComponent.cpp  ColliderComponent.h  Component.h  SpriteRendererComponent.cpp  SpriteRendererComponent.h  TransformComponent.cpp  TransformComponent.h
src/gameobject/inGameObjects/: Asteroid.cpp  Asteroid.h
src/health/: IHealth.h
src/inGameObjects/: Asteroid.cpp  Asteroid.h
src/objectPooling/: ObjectPool.h  PoolableObject.h
src/objects/asteroid/: Asteroid.cpp  Asteroid.h
src/objects/enemies/: EnemiesEnum.h  EnemyBase.cpp  EnemyBase.h
src/objects/enemies/types/: Bomber.cpp  Bomber.h  Fighter.cpp  Fighter.h  Scout.cpp  Scout.h
src/objects/projectile/: Projectile.cpp  Projectile.h
src/objects/ship/: MainShip.cpp  MainShip.h
src/scenes/: DeathScene.cpp  DeathScene.h  Game.cpp  Game.h  Gameplay.cpp  Gameplay.h  GameplayScene.cpp  GameplayScene.h  MainMenu.cpp  MainMenu.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/scenes/Gameplay/: ObjectsSpawner.cpp  ObjectsSpawner.h
src/ship/: MainShip.cpp  MainShip.h  Projectile.cpp  Projectile.h
src/systems/animation/: Animation.cpp  Animation.h
src/systems/collisionManager/: CollisionManager.cpp  CollisionManager.h
src/systems/debug/: DebugGame.cpp  DebugGame.h  ILoggable.h
src/systems/enemiesManager/: EnemiesManager.cpp  EnemiesManager.h
src/systems/gameState/: GameStateManager.cpp  GameStateManager.h
src/systems/gameState/states/: EarlyState.h  LateEarlyState.h  LateLateState.h  LateMiddleState.h  LateState.h  MiddleState.h
src/systems/gameState/states/_baseInterface/: IGameState.h
src/systems/health/: IHealth.h
src/systems/objectPooling/: PoolableObject.h
src/systems/objectsSpawner/: ObjectsSpawner.cpp  ObjectsSpawner.h
src/ui/button/: Button.cpp  Button.h
src/ui/console/: Console.h  LogMessageStruct.h  MessageEnum.h
src/ui/healthBar/: HealthBar.cpp  HealthBar.h
src/ui/score/: ScoreManager.cpp  ScoreManager.h
src/ui/slider/: Slider.cpp  Slider.h
